dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-deployment-app-service
spec:
  selector:
    app: argo-deployment-app
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
