dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-deployment-app-ingress
spec:
  tls:
    - hosts:
        - test.kany.dev
      secretName: kanydev
  rules:
    - host: test.kany.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-deployment-app
                port:
                  number: 3000
